<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent">


   <include layout="@layout/toolbar"/>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="10dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_name"
            android:padding="24dp"
            android:drawablePadding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/hintName"
            android:drawableStart="@drawable/ic_name"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_Phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="phone"
            android:padding="24dp"
            android:drawablePadding="12dp"
            android:hint="@string/hintPhone"
            android:drawableStart="@drawable/ic_phone"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText

            android:id="@+id/input_email"
            android:drawableStart="@drawable/ic_emailda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:padding="24dp"
            android:drawablePadding="12dp"
            android:hint="@string/hintEmail" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText

            android:id="@+id/input_age"
            android:drawableStart="@drawable/ic_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:padding="24dp"
            android:drawablePadding="12dp"
            android:hint="@string/ageHint" />
    </android.support.design.widget.TextInputLayout>





    <Button android:id="@+id/btn_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:text="@string/insert"
        android:background="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/white"/>

</LinearLayout>

</android.support.design.widget.CoordinatorLayout>