<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:text="@string/LOGIN"
            android:textColor="@color/colorPrimary"
            android:textSize="30dp"
            android:layout_marginBottom="30dp"


            />

    </LinearLayout>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="16dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:padding="10dp"
                android:fitsSystemWindows="true"
                >



                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText

                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="textEmailAddress"
                        android:hint="@string/hintEmail"
                        android:drawablePadding="14dp"
                        android:drawableStart="@drawable/ic_emailda"

                        android:layout_marginBottom="5dp"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp">

                    <EditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:drawableStart="@drawable/ic_password"
                        android:drawablePadding="12dp"

                        android:inputType="textPassword"
                        android:hint="@string/hintPassword"
                        />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/login"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/login"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/forget"
                    android:textColor="@color/colorPrimary"/>


            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>



    </android.support.design.widget.CoordinatorLayout>
