<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.example.hadeel.samples.Massage">


    <include layout="@layout/toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"

        android:gravity="center">
        <TextView
            android:id="@id/title"
            android:text=""
            android:textSize="30dp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:id="@+id/cardView"
        app:cardElevation="5dp"
        android:layout_marginTop="120dp"
        app:cardUseCompatPadding="true"
        android:background="@color/back"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"

        android:layout_marginStart="10dp"

        android:layout_marginTop="30dp"
        android:id="@+id/linearLayout4">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_resever"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/resever"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/to"/>

</android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"

        android:layout_marginStart="10dp"

        android:layout_marginTop="110dp"
        android:id="@+id/linearLayout5">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/subjectContent"
            android:layout_marginStart="15dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/subject"/>

</android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_weight="5"

        android:layout_marginStart="10dp"

        android:layout_marginTop="190dp">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_Message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/messageContent"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:hint="@string/message"
            android:drawableStart="@drawable/ic_recorde"

            />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    </android.support.v7.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_marginTop="350dp"
        android:gravity="center"
        android:layout_marginStart="10dp"

        android:layout_alignTop="@+id/cardView"
        android:layout_alignParentStart="true">

    <Button
        android:id="@+id/send"

        android:layout_width="100dp"
        android:layout_gravity="start"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_marginEnd="30dp"
        android:textColor="@color/login"
        android:background="@drawable/trangle1"/>
        <Button
            android:id="@+id/sendEmail"
            android:layout_width="100dp"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:text="@string/emailMsg"
            android:textColor="@color/login"
            android:background="@drawable/trangle1"/>
    </LinearLayout>

</RelativeLayout>
