<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:fitsSystemWindows="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:fitsSystemWindows="true">

                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="100dp"

                    android:layout_height="100dp"
                    android:layout_gravity="start"

                    android:src="@drawable/person"
                    app:border_color="@color/colorAccent"
                    app:border_width="3dp" />

                <TextView
                    android:id="@+id/title"
                    android:fontFamily="casual"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:padding="24dp"
                    android:text=" " />
                </LinearLayout>

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="310dp"
                    android:layout_height="180dp"
                    android:layout_gravity="start"
                    android:layout_margin="10dp"
                     />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="true"
                    android:layout_marginTop="1dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp">

                    <TextView
                    android:id="@+id/like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    />
                    <TextView
                        android:id="@+id/likeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/like"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="  " />

                    <TextView
                        android:id="@+id/comment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        />
                    <TextView
                        android:id="@+id/commentText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comment"

                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="  " />

                    <TextView
                        android:id="@+id/share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_gravity="end"/>


                </LinearLayout>

                <View
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"

                    android:background="@color/grey" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"

                    >

                    <TextView
                        android:id="@+id/likeic"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="1dp"
                        android:drawableStart="@drawable/ic_like"
                        android:drawablePadding="6dp"

                        android:text="@string/likeic" />

                    <TextView
                        android:id="@+id/commentic"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:drawableStart="@drawable/ic_coment"

                        android:text="@string/commentic" />
                    <TextView
                        android:id="@+id/shareic"
                        android:textSize="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:drawableStart="@drawable/ic_share"

                        android:text="@string/shareic" />
                </LinearLayout>


            </LinearLayout>
        </android.support.v7.widget.CardView>
        </LinearLayout>

</LinearLayout>