<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="start">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:gravity="start"
                android:padding="10dp"
                android:textSize="20dp"
                android:textColor="@color/colorPrimary"
                android:textStyle="italic"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="start"

            >
            <TextView
                android:id="@+id/name"
                android:textSize="20dp"
                android:padding="10dp"
                android:layout_marginStart="65dp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:gravity="start"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:padding="10dp"
                android:gravity="start"
                android:textStyle="italic"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"

            android:gravity="start">
            <TextView

                android:id="@+id/phone"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_marginStart="65dp"
                android:padding="10dp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:gravity="start"


            android:orientation="horizontal">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"

                android:padding="10dp"
                android:textStyle="italic"
                android:textSize="20dp"

                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:orientation="horizontal"
            android:gravity="start"
            >

            <TextView
                android:id="@+id/email"
                android:textSize="20dp"
                android:padding="10dp"
                android:text=""
                android:layout_marginStart="65dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:gravity="start"


            android:orientation="horizontal">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"

                android:padding="10dp"
                android:textStyle="italic"
                android:textSize="20dp"

                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:orientation="horizontal"
            android:gravity="start"
            >

            <TextView
                android:id="@+id/age"
                android:textSize="20dp"
                android:padding="10dp"

                android:layout_marginStart="65dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
        <TextView
            android:id="@+id/delete"
            android:layout_marginTop="50dp"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_pasket"/>


    </android.support.v7.widget.CardView>

</RelativeLayout>